--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="result_win">あなたの勝ちです</string>
     <string name="result_lose">コンピュータの勝ちです</string>
     <string name="result_draw">あいこです</string>
-    <string name="count">ゲーム　〇回目</string>
+    <string name="count">ゲームカウント［］</string>
 </resources>
