--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="result_lose">コンピュータの勝ちです</string>
     <string name="result_draw">あいこです</string>
     <string name="count">ゲーム　〇回目</string>
+    <string name="totalGameCount">総試合数　0　回</string>
+    <string name="winCount">勝利数　0　回</string>
+    <string name="winRate">勝率　0　％</string>
+    <string name="myWinningStreakCount">連勝数　0　回</string>
+    <string name="maxWinningStreakCount">最大連勝数　0　回</string>
 </resources>
