--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="result_draw">あいこです</string>
     <string name="count">ゲーム　〇回目</string>
     <string name="play">●PLAY GAME !!●</string>
+    <string name="checkbox">後出し！</string>
 </resources>
